test_regress/t/t_dpi_dup_bad.out
%Error: t/t_dpi_dup_bad.v:13:51: Duplicate declaration of DPI function with different formal arguments: 't.oth_f_int2'
   13 |    import "DPI-C" pure dpii_fa_bit = function int oth_f_int2(input int i, input int bad);
      |                                                   ^~~~~~~~~~
                               : ... New prototype:      pure int dpii_fa_bit (int, int)
        t/t_dpi_dup_bad.v:12:47: ... Original prototype: int dpii_fa_bit (int)
   12 |    import "DPI-C" dpii_fa_bit =  function int oth_f_int1(input int i);
      |                                               ^~~~~~~~~~
%Error: Exiting due to
